--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ h1{
     color: aqua;
 }
 body{
-    background: url(https://image.shutterstock.com/image-photo/river-stream-waterfall-forest-landscape-260nw-1585363855.jpg);
+    background: url(https://image.shutterstock.com/image-photo/stunning-galaxy-elements-this-image-260nw-1717095772.jpg);
     background-size: cover;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+font-weight: 100px;
+font-size:large;
+background-size:1800px;
+color: yellow;
+    
 }
