--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1{
     color: aqua;
 }
 body{
-    background: url(https://image.shutterstock.com/image-photo/stunning-galaxy-elements-this-image-260nw-1717095772.jpg);
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ93LhD7IR--uvGXqfEQ471xcvQwqWTuDgkyg&usqp=CAU);
     background-size: cover;
     font-family: Georgia, 'Times New Roman', Times, serif;
 font-weight: 200px;
